--- a/index.html
+++ b/index.html
@@ -9,25 +9,31 @@
     <title>Menu</title>
 </head>
 <body>
+  <h3 id="timerOut"></h3>
     <!-- containerr -->
 <div class="container">
     <!-- div img -->
-   <div class="imgDiv" id="1"></div>
-   <div class="imgDiv" id="2"></div>
-   <div class="imgDiv" id="3"></div>
-   <div class="imgDiv" id="4"></div>
-   <div class="imgDiv" id="5"></div>
-   <div class="imgDiv" id="6"></div>
-   <div class="imgDiv" id="7"></div>     
-   <div class="imgDiv" id="8"></div>
-   <div class="imgDiv" id="9"></div>
-   <div class="imgDiv" id="10"></div>
-   <div class="imgDiv" id="11"></div>
-   <div class="imgDiv" id="12"></div>
-   <div class="imgDiv" id="13"></div>
-   <div class="imgDiv" id="14"></div>
-   <div class="imgDiv" id="15"></div>     
-   <div class="imgDiv" id="16"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>     
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv" ></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>     
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>
+   <div class="imgDiv"></div>     
+  
 </div>
 
     <script src="script.js"></script>
