--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Menu</title>
 </head>
 <body>
-  <h3 id="timerOut"></h3>
+  <h1 id="timerOut">3</h1>
     <!-- containerr -->
 <div class="container">
     <!-- div img -->
@@ -35,7 +35,9 @@
    <div class="imgDiv"></div>     
   
 </div>
-
+<div id="gameAgain">
+        <button onclick="refreshBtn()" class="btnOver"><span class="btnText"></span></button>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
