--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Menu</title>
+    <title>Memory Game</title>
 </head>
 <body>
-  <h1 id="timerOut">3</h1>
+  <h1 id="timerOut">8</h1>
     <!-- containerr -->
 <div class="container">
     <!-- div img -->
